--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "slug": "farm-phone",
     "sdkVersion": "27.0.0",
     "privacy": "public",
-    "icon": "assets/img/cat.png",
+    "icon": "assets/img/pigIcon.png",
     "ios": {
       "bundleIdentifier": "com.farm.farm-phone"
     }
